# jawaal_bot

./: README.md
jawbot_bringup/: CMakeLists.txt  package.xml
jawbot_bringup/config/: jawbot_controllers.yaml
jawbot_bringup/launch/: real_bringup.launch.py
jawbot_description/: CMakeLists.txt  package.xml
jawbot_description/config/: joint_names_gwal.yaml
jawbot_description/launch/: robot_description.launch.py
jawbot_description/meshes/: caster_back_link.STL  left_wheel_link.STL
jawbot_description/rviz/: rviz.rviz
jawbot_description/urdf/: jawbot.csv  jawbot.urdf.xacro  jawbot_ros2_control.urdf.xacro
jawbot_gazebo/: CMakeLists.txt  package.xml
jawbot_gazebo/config/: ros_gz_bridge.yaml
jawbot_gazebo/launch/: jawbot_gazebo.launch.py
jawbot_gazebo/models/jawbot/: model.config  model.sdf
jawbot_gazebo/models/jawbot/meshes/: caster_back_wheel_link.STL  caster_front_link.STL  caster_front_wheel_link.STL  lidar_link.STL  right_wheel_link.STL
jawbot_gazebo/models/turtlebot3_world/: model.config
jawbot_gazebo/worlds/: jawbot_world.sdf
jawbot_hardware/: CMakeLists.txt  Control_Arc.md  jawbot_hardware.xml  package.xml
jawbot_hardware/firmware/jawbot_pico/: L298n_motor_driver.cpp  L298n_motor_driver.h  RobotJoint.cpp  RobotJoint.h  SerialProtocol.cpp  SerialProtocol.h  WheelEncoder.cpp  WheelEncoder.h  jawbot_pico.ino  pid.cpp  pid.h
jawbot_hardware/include/jawbot_hardware/: jawbot_hardware_interface.hpp  serial_comms.hpp
jawbot_hardware/src/: jawbot_hardware_interface.cpp  serial_comms.cpp
jawbot_navigation/: CMakeLists.txt  package.xml
